base/traefik-routes/pihole-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: dns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.${SITE_DOMAIN}`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
